# mssanitizer

./: .clang-tidy  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_EN.md  build.py
csrc/: CMakeLists.txt  main.cpp
csrc/address_sanitizer/: address_sanitizer.cpp  address_sanitizer.h  asan_action.cpp  asan_action.h  bounds_check.cpp  bounds_check.h  mem_error_def.h  pm.cpp  shadow_memory.cpp  shadow_memory.h
csrc/core/: cli_logo.cpp  cli_logo.h  cli_parser.cpp  cli_parser.h
csrc/core/framework/: barrier_database.h  barrier_database.hpp  call_stack.cpp  checker.cpp  checker.h  command.cpp  command.h  communication.cpp  config.h  config_manager.h  cross_core_sync_info_container.cpp  cross_core_sync_info_container.h  cross_npu_checker.cpp  cross_npu_checker.h  device_manager.cpp  device_manager.h  event_container.cpp  event_container.h  event_def.h  format_converter.cpp  format_converter.h  kernel_block.cpp  kernel_block.h  pipe_line.h  process.cpp  (+16 more)
csrc/hooks/: CMakeLists.txt  hook_report.cpp
csrc/include/: sanitizer_report.h
csrc/plugin/: addr_process.h  kernel_pub_func.h  online_check.h  parse_record.h  record_calc_instructions.h  record_ctrl_instructions.h  record_main_scalar_empty_instructions.h  record_move_instructions.h  record_mstx_instructions.h  record_simt_instructions.h  record_sync_instructions.h  record_type_map.h  recorder.h  shadow_memory_online.h  utils.h
csrc/race_sanitizer/: cross_npu_race_sanitizer.cpp  cross_npu_race_sanitizer.h  race_info_display.h  race_sanitizer.cpp  race_sanitizer.h
csrc/register_sanitizer/: register_sanitizer.cpp
csrc/sync_sanitizer/: sync_info_display.h  sync_sanitizer.cpp  sync_sanitizer.h
(+127 files in other folders)
